#3375 Fix underline behind labels and uppercasing for words in labels

--- a/packages/core/src/components/document-component/document-component.scss
+++ b/packages/core/src/components/document-component/document-component.scss
@@ -129,7 +129,7 @@
   --link-color: #{document-component.$heading-anchor-color};
   --link-hover-color: #{document-component.$heading-anchor-hover-color};
 
-  .heading-element {
+  .heading-title > dso-ozon-content {
     cursor: pointer;
     @include link.pseudo();
   }
